--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -80,9 +80,15 @@ $black: #2b2523
   fill: currentColor
 .navbar-brand .navbar-item.logo
   padding: 0 1rem
+.navbar-brand:hover
+  text-decoration: none
 footer.footer
   padding: 3rem 0rem 0rem
   background-color: transparent
+
+.navbar-logo
+  font-weight: 700
+  font-size: 1.25rem
 
 //Menu overrides
 $menu-item-color: $white-ter
