--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -10,6 +10,19 @@ $primary-invert: $kaldi-red-invert
 $body-color: #333
 $black: #2b2523
 
+.layout
+  height: 100vh
+  display: flex
+  flex-direction: column
+
+.content
+  flex: 1
+
+footer.footer
+  padding: 0
+  display: flex
+  content-align: center
+
 .navbar .navbar-menu
   box-shadow:none !important
 
@@ -82,9 +95,6 @@ $black: #2b2523
   padding: 0 1rem
 .navbar-brand:hover
   text-decoration: none
-footer.footer
-  padding: 3rem 0rem 0rem
-  background-color: transparent
 
 .navbar-logo
   font-weight: 700
@@ -107,7 +117,8 @@ $menu-label-color: $white-ter
   list-style: none !important
   text-align: left
 .social
-  padding: 2em
+  margin: 0 auto
+  padding: 1em
 .social a
     padding: .5em .5em .3em .5em
     border-radius: 1em
@@ -120,27 +131,25 @@ $menu-label-color: $white-ter
 
 // blog roll
 .blog-list-item.is-featured
-  background-color: #d6400033;
+  background-color: #d6400033
 .blog-list-item header
-  display: flex;
-  margin-bottom: 1em;
+  display: flex
+  margin-bottom: 1em
 .blog-list-item .featured-thumbnail
-  flex-basis: 35%;
-  margin: 0 1.5em 0 0;
+  flex-basis: 35%
+  margin: 0 1.5em 0 0
 
 
 @import "~bulma"
 
-
 // responsiveness
 +tablet-only
   .blog-list-item .featured-thumbnail
-    flex-basis: 50%;
+    flex-basis: 50%
 
 +mobile
   .blog-list-item header
     display: block
-  .blog-list-item .featured-thumbnail
-    text-align: center;
-    max-width: 70%;
-    margin: 0 0 1em;
+    text-align: center
+    max-width: 70%
+    margin: 0 0 1em
